--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "get-youtube-title": "^1.0.1",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "lowdb": "^1.0.0",
+    "morgan": "~1.9.1",
+    "shortid": "^2.2.16",
+    "socket.io": "^4.0.1"
   }
 }
