lowdb, 간단한 유튜브 플레이하는 socket.io  적용

--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "scripts": {
     "start": "nodemon ./bin/www"
   },
+  "nodemonConfig": {
+    "ignore": ["db.json"]
+  },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
