--- a/package.json
+++ b/package.json
@@ -6,17 +6,22 @@
     "start": "nodemon ./bin/www"
   },
   "nodemonConfig": {
-    "ignore": ["db.json"]
+    "ignore": [
+      "db.json"
+    ]
   },
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "express-session": "^1.17.1",
     "get-youtube-title": "^1.0.1",
     "http-errors": "~1.6.3",
     "lowdb": "^1.0.0",
     "morgan": "~1.9.1",
+    "passport": "^0.4.1",
     "shortid": "^2.2.16",
     "socket.io": "^4.0.1"
   }
