--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www --verbose" 
+    "start": "nodemon ./bin/www"
   },
   "nodemonConfig": {
     "ignore": [
@@ -23,7 +23,7 @@
     "morgan": "~1.9.1",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
-    "passport-google-oauth": "^2.0.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-kakao": "^1.0.1",
     "passport-naver": "^1.0.6",
     "shortid": "^2.2.16",
