getyoutubetitle 모듈 때문에 youtube data apikey 추가

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,10 @@ package-lock.json
 
 db/*.json
 
-config/login.json
-config/session.json
+# config/login.json
+# config/session.json
+# config/apikey.json
+
+config/*[^.template].json
 
 
